--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
     <!-- font auth-->
     <link href="https://fonts.googleapis.com/css?family=Cambay&display=swap" rel="stylesheet">
+    <title>quiz-app</title>
 </head>
 <body>
     <div id="root"></div>
