--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- font for quiz-->
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
-    <!-- font auth-->
-    <link href="https://fonts.googleapis.com/css?family=Cambay&display=swap" rel="stylesheet">
-    <!-- title-logo -->
-    <link rel="icon" href="./logo.png">
-    <title>Cryptinas_</title>
+    <title>quiz-v2</title>
 </head>
 <body>
     <div id="root"></div>
